[package]
name = "desktop-tui"
description = "A desktop environment without graphics (tmux-like)"
version = "0.3.2"
edition = "2024"
authors = ["julien-cpsn"]
license = "MIT"
readme = "README.md"
documentation = "https://github.com/Julien-cpsn/desktop-tui"
homepage = "https://github.com/Julien-cpsn/desktop-tui"
repository = "https://github.com/Julien-cpsn/desktop-tui"
keywords = ["Desktop", "Environment", "TUI", "AppCUI-rs"]

[dependencies]
appcui = { version = "0.4.6", features = ["CROSSTERM", "TRUE_COLORS"] }

virtual-terminal = "0.1.5"

serde = { version = "1.0.228", features = ["derive"] }
toml = "1.0.3"

anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
chrono = { version = "0.4.44", features = ["now"] }
tokio = "1.49.0"
async-channel = "2.5.0"
walkdir = "2.5.0"
nestify = "0.3.3"
directories = "6.0.0"